fixed align for link

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -265,6 +265,7 @@ li {
       text-decoration: underline;
     }
   }
+  align-self: center !important;
 }
 
 .alt-title {
